The width for game-body has been set to 615px for media screen sizes with a min-width of 632px. This has been done as there was some spacing between the buzzers on row 2 (yellow buzzer, main control face and red buzzer) and I wanted to ensure that the distance between the red/yellow buzzers and the main control face is equal to the distance between the green/blue buzzers and the main control face. There is now equal positioning of all four buzzers around the sides of the main control face.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,5 +186,6 @@ body, html {
 @media screen and (min-width:632px){
   .game-body {
     top: 15px;
+    width: 615px;
 }
 }
